[workspace]
members = [
    "httpbin-actix",
    "httpbin-axum",
    "httpbin-poem",
    "httpbin-poem-openapi",
    "httpbin-rocket",
    "httpbin-salvo",
    "httpbin",
]

[workspace.package]
version = "0.1.0"
authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>"]
description = "HTTP Request & Response Service pretty like [httpbin](http://httpbin.org) but powered by Rust"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.70"
clap = { version = "4.3.17", features = ["derive"] }
env_logger = "0.10.0"
httpbin = { path = "httpbin" }
infer = "0.15.0"
log = "0.4.19"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
serde_qs = "0.12.0"
serde_with = "3.1.0"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release-min]
inherits = "release"
# REF: https://github.com/johnthagen/min-sized-rust
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
