[workspace]
members = [
    "httpbin-actix",
    "httpbin-axum",
    "httpbin-poem",
    "httpbin-poem-openapi",
    "httpbin-rocket",
    "httpbin-salvo",
    "httpbin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["duskmoon (Campbell He) <kp.campbell.he@duskmoon314.com>"]
description = "HTTP Request & Response Service pretty like [httpbin](http://httpbin.org) but powered by Rust"
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
env_logger = "0.10.1"
httpbin = { path = "httpbin" }
infer = "0.15.0"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_qs = "0.12.0"
serde_with = "3.1.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release-min]
inherits = "release"
# REF: https://github.com/johnthagen/min-sized-rust
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
