[package]
name = "httpbin-poem-openapi"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
httpbin = { workspace = true }
infer = { workspace = true }
poem = "1.3.56"
poem-openapi = { version = "2.0.27", features = [
    "swagger-ui",
    "rapidoc",
    "redoc",
    "openapi-explorer",
] }
serde_json = { workspace = true }
serde_qs = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
