[package]
name = "httpbin-poem"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
httpbin = { workspace = true }
infer = { workspace = true }
poem = { version = "1.3.55", features = ["anyhow"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
