[package]
name = "httpbin-salvo"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
httpbin = { workspace = true }
infer = { workspace = true }
salvo = { version = "0.37.9", features = [
    "anyhow",
    "logging",
    "cors",
    "trailing-slash",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = "*"
