[package]
name = "httpbin"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { workspace = true }
indexmap = { version = "2.0.0", features = ["serde"] }
serde = { workspace = true }
serde_with = { workspace = true }
thiserror = "1.0.44"
toml = "0.7.6"
uuid = { version = "1.4.1", features = [
    "v1",
    "v3",
    "v4",
    "v5",
    "v6",
    "v7",
    "v8",
] }
